--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/1a07d9eef9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <title>Reality Cables</title>
-    <link rel="icon" type="image/svg" href="/images/volume-up.svg" />
+    <link rel="icon" type="image/svg" href="./images/volume-up.svg" />
 </head>
 <body>
     <div class="wrapper">
