--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -22,12 +22,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="/products.html">Products</a>
-                        <a class="nav-link" href="/testimonials.html">Testimonials</a>
-                        <a class="nav-link" href="/news.html">News</a>
-                        <a class="nav-link" href="/faq.html">FAQ</a>
-                        <a class="nav-link" href="/contact.html">Contact</a>
+                        <a class="nav-link active" href="./">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./products.html">Products</a>
+                        <a class="nav-link" href="./testimonials.html">Testimonials</a>
+                        <a class="nav-link" href="./news.html">News</a>
+                        <a class="nav-link" href="./faq.html">FAQ</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </div>
                 </div>
             </nav>
@@ -51,7 +51,7 @@
                     better, period!
                 </div>
                 <div class="col-sm-3 center">
-                    <img src="/images/speaker_cable_3.jpg" width="250" />
+                    <img src="./images/speaker_cable_3.jpg" width="250" />
                 </div>
             </div>
             <div class="row">
@@ -74,7 +74,7 @@
                     other designs.
                 </div>
                 <div class="col-sm-3 center">
-                    <img src="/images/Reality_003_edited.jpg" width="250" />
+                    <img src="./images/Reality_003_edited.jpg" width="250" />
                 </div>
             </div>
             <div class="row">
@@ -105,6 +105,6 @@
     <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
