--- a/wwwroot/products.html
+++ b/wwwroot/products.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/1a07d9eef9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <title>Reality Cables</title>
-    <link rel="icon" type="image/svg" href="/images/volume-up.svg" />
+    <link rel="icon" type="image/svg" href="./images/volume-up.svg" />
 </head>
 <body>
     <div class="wrapper">
@@ -22,12 +22,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="/products.html">Products</a>
-                        <a class="nav-link" href="/testimonials.html">Testimonials</a>
-                        <a class="nav-link" href="/news.html">News</a>
-                        <a class="nav-link" href="/faq.html">FAQ</a>
-                        <a class="nav-link" href="/contact.html">Contact</a>
+                        <a class="nav-link active" href="./">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./products.html">Products</a>
+                        <a class="nav-link" href="./testimonials.html">Testimonials</a>
+                        <a class="nav-link" href="./news.html">News</a>
+                        <a class="nav-link" href="./faq.html">FAQ</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </div>
                 </div>
             </nav>
@@ -47,7 +47,7 @@
     <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/products.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/products.js"></script>
 </body>
 </html>
