--- a/wwwroot/faq.html
+++ b/wwwroot/faq.html
@@ -17,6 +17,7 @@
                 <div class="row">
                     <h1>FAQ</h1>
                 </div>
+                <section class="content"></section>
             </div>
         </div>
     </main>
