--- a/wwwroot/news.html
+++ b/wwwroot/news.html
@@ -15,8 +15,9 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="row">
-                    <h1>News</h1>
+                    <h1>Latest News</h1>
                 </div>
+                <section class="content"></section>
             </div>
         </div>
     </main>
