--- a/wwwroot/testimonials.html
+++ b/wwwroot/testimonials.html
@@ -17,6 +17,7 @@
                 <div class="row">
                     <h1>Testimonials</h1>
                 </div>
+                <section class="content"></section>
             </div>
         </div>
     </main>
