Updated home page heading font family

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="row">
-                    <h1>Welcome to Reality Cables!</h1>
+                    <h1 style="font-family: 'Bookman Old Style';">Welcome to Reality Cables!</h1>
                 </div>
             </div>
             <div class="row">
