--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,9 +12,9 @@
     <header></header>
     <main role="main" class="flex-shrink-0">
         <div class="container">
-            <div class="col-sm-12">
+            <div class="col-lg-12 hidden-xs">
                 <div class="row">
-                    <h1 style="font-family: 'Bookman Old Style';">Welcome to Reality Cables!</h1>
+                    <h1 class="home-title">Welcome to Reality Cables!</h1>
                 </div>
             </div>
             <div class="row">
