Hide welcome on mobile

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,7 +12,7 @@
     <header></header>
     <main role="main" class="flex-shrink-0">
         <div class="container">
-            <div class="col-lg-12 hidden-xs">
+            <div class="col-lg-12 d-none d-md-block">
                 <div class="row">
                     <h1 class="home-title">Welcome to Reality Cables!</h1>
                 </div>
