Updated titles Fixed email/phone on mobile contact

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -14,7 +14,7 @@
     <main class="container">
         <div class="col-sm-12" style="padding-top: 60px;">
             <div class="row">
-                <h1>Template</h1>
+                <h1 class="title">Template</h1>
             </div>
         </div>
     </main>
