--- a/wwwroot/contact.html
+++ b/wwwroot/contact.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="col-sm-12">
 				<div class="row">
-					<h1>Contact Us</h1>
+					<h1 class="title">Contact Us</h1>
 				</div>
 				<div class="row">
 					<div class="col">
@@ -36,6 +36,7 @@
 							</svg> admin@realitycables.com
 						</a>
 					</div>
+					<div class="d-md-none">&nbsp;</div>
 					<div class="col-sm-3">
 						<a href="tel:8477022620">
 							<svg class="bi" width="1em" height="1em" fill="currentColor">
