--- a/wwwroot/faq.html
+++ b/wwwroot/faq.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="row">
-                    <h1>FAQ</h1>
+                    <h1 class="title">FAQ</h1>
                 </div>
                 <section class="content"></section>
             </div>
