--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="col-lg-12 d-none d-md-block">
                 <div class="row">
-                    <h1 class="home-title">Welcome to Reality Cables!</h1>
+                    <h1 class="title">Welcome to Reality Cables!</h1>
                 </div>
             </div>
             <div class="row">
