--- a/wwwroot/news.html
+++ b/wwwroot/news.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="row">
-                    <h1>Latest News</h1>
+                    <h1 class="title">Latest News</h1>
                 </div>
                 <section class="content"></section>
             </div>
