--- a/wwwroot/products.html
+++ b/wwwroot/products.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="row">
-                    <h1>Products</h1>
+                    <h1 class="title">Products</h1>
                 </div>
             </div>
             <section class="products"></section>
