--- a/wwwroot/testimonials.html
+++ b/wwwroot/testimonials.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="row">
-                    <h1>Testimonials</h1>
+                    <h1 class="title">Testimonials</h1>
                 </div>
                 <section class="content"></section>
             </div>
